--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -2,7 +2,7 @@ name: Update HCB Data
 
 on:
   schedule:
-    - cron: "0 */2 * * *"   # every 2 hours
+    - cron: "0 */2 * * *"
   workflow_dispatch:
 
 jobs:
@@ -24,19 +24,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4 lxml pdfplumber python-dateutil rapidfuzz
 
-      # ===== DEBUG: confirm files/paths =====
       - name: Show repo tree (debug)
         run: |
-          echo "Working directory:"
           pwd
-          echo "Git status:"
           git status
-          echo "Top-level files:"
           ls -la
-          echo "First 3 directory levels:"
           find . -maxdepth 3 -type f | sort
 
-      # ===== SAFETY: ensure data file exists so commit step always has a target =====
       - name: Ensure data/index.json exists
         run: |
           mkdir -p data
@@ -47,18 +41,15 @@ jobs:
             echo "data/index.json already exists."
           fi
 
-      # ===== RUN THE SCRAPER PIPELINE =====
       - name: Run pipeline
         run: |
           set -e
-          echo "Running scripts/update_data.py ..."
-          python scripts/update_data.py
+          echo "Running scripts.update_data as a module ..."
+          python -m scripts.update_data
           echo "Pipeline finished."
-          echo "File size & preview:"
           wc -c data/index.json || true
           head -n 50 data/index.json || true
 
-      # ===== COMMIT ONLY IF CHANGED =====
       - name: Commit if data changed
         run: |
           if [[ -n "$(git status --porcelain data/index.json)" ]]; then
